# contactbook

./: .gitignore  Cargo.toml  README.md  database.sqlite
app/: package-lock.json  package.json
app/src/: main.js
app/src/assets/Controllers/: book.js
app/src/views/: HomeView.vue
src/: main.rs
terminal/: .gitignore  Cargo.toml  database.sqlite
terminal/src/: main.rs
